--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@ button:hover {
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  margin: 0.25rem 0 0;
+  margin: 0.5rem 0 0;
   padding: 0 0.5rem 0.25rem;
   border-bottom: 1px solid #eee;
 }
@@ -173,10 +173,11 @@ button:hover {
 
 .searchForm input[type='text'] {
   flex-grow: 1;
-  max-width: 100%;
+  max-width: calc(100% - 50px);
   min-height: 48px;
   font-size: 1rem;
   padding: 0.25rem;
   border-radius: 0.25rem;
+  margin-right: 0.25rem;
   outline: none;
 }
